WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133681
REGRESSION (
r167937
): Do not use effective zoom factor while resolving media query's min-, max-(device)width/height values.
https://bugs.webkit.org/show_bug.cgi?id=133681
Summary
REGRESSION (r167937): Do not use effective zoom factor while resolving media ...
alan
Reported
2014-06-10 09:44:46 PDT
Using effective zoom factor give false result for width/height values.
Attachments
Patch
(8.97 KB, patch)
2014-06-10 09:59 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(9.07 KB, patch)
2014-06-10 11:39 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-05 for mac-mountainlion
(611.73 KB, application/zip)
2014-06-10 12:21 PDT
,
Build Bot
no flags
Details
Patch
(10.29 KB, patch)
2014-06-10 12:51 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-01 for mac-mountainlion
(513.70 KB, application/zip)
2014-06-10 14:31 PDT
,
Build Bot
no flags
Details
Patch
(10.99 KB, patch)
2014-06-10 14:38 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2014-06-10 09:45:04 PDT
<
rdar://problem/17233577
>
alan
Comment 2
2014-06-10 09:59:46 PDT
Created
attachment 232792
[details]
Patch
Simon Fraser (smfr)
Comment 3
2014-06-10 10:11:55 PDT
Comment on
attachment 232792
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=232792&action=review
> Source/WebCore/css/CSSToLengthConversionData.cpp:52 > + return 0.0;
0
> Source/WebCore/css/CSSToLengthConversionData.cpp:63 > return 0.0;
0
> Source/WebCore/css/MediaQueryEvaluator.cpp:730 > + m_frame->document()->renderView(), 1, false);
So mysterious. Why doesn't the second constructor just initialize m_zoom to 1? It seems to leave it uninitialized.
Simon Fraser (smfr)
Comment 4
2014-06-10 10:19:59 PDT
Comment on
attachment 232792
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=232792&action=review
> LayoutTests/fast/media/media-query-with-scaled-content.html:27 > + setTimeout(function() { window.internals.setPageZoomFactor(1); testRunner.notifyDone(); }, 100);
No timeout!
Bem Jones-Bey
Comment 5
2014-06-10 10:29:20 PDT
Comment on
attachment 232792
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=232792&action=review
>> Source/WebCore/css/MediaQueryEvaluator.cpp:730 >> + m_frame->document()->renderView(), 1, false); > > So mysterious. > > Why doesn't the second constructor just initialize m_zoom to 1? It seems to leave it uninitialized.
If an explicit zoom isn't provided, m_useEffectiveZoom is set to true, and it uses the zoom on the style instead of m_zoom.
alan
Comment 6
2014-06-10 11:39:15 PDT
Created
attachment 232800
[details]
Patch
alan
Comment 7
2014-06-10 11:39:27 PDT
Comment on
attachment 232800
[details]
Patch EWS
Build Bot
Comment 8
2014-06-10 12:21:46 PDT
Comment on
attachment 232800
[details]
Patch
Attachment 232800
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/5543294557749248
New failing tests: fast/media/media-query-with-scaled-content.html
Build Bot
Comment 9
2014-06-10 12:21:51 PDT
Created
attachment 232803
[details]
Archive of layout-test-results from webkit-ews-05 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-05 Port: mac-mountainlion Platform: Mac OS X 10.8.5
alan
Comment 10
2014-06-10 12:51:01 PDT
Created
attachment 232806
[details]
Patch
alan
Comment 11
2014-06-10 12:51:25 PDT
Comment on
attachment 232806
[details]
Patch fixed win build. ews testing.
Build Bot
Comment 12
2014-06-10 14:30:55 PDT
Comment on
attachment 232806
[details]
Patch
Attachment 232806
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/6288843502256128
New failing tests: fast/media/media-query-with-scaled-content.html
Build Bot
Comment 13
2014-06-10 14:31:01 PDT
Created
attachment 232819
[details]
Archive of layout-test-results from webkit-ews-01 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-01 Port: mac-mountainlion Platform: Mac OS X 10.8.5
alan
Comment 14
2014-06-10 14:38:48 PDT
Created
attachment 232820
[details]
Patch
alan
Comment 15
2014-06-10 14:39:32 PDT
Comment on
attachment 232820
[details]
Patch Try EWS again now with the fix included. :)
WebKit Commit Bot
Comment 16
2014-06-10 16:13:54 PDT
Comment on
attachment 232820
[details]
Patch Clearing flags on attachment: 232820 Committed
r169779
: <
http://trac.webkit.org/changeset/169779
>
WebKit Commit Bot
Comment 17
2014-06-10 16:14:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug