REGRESSION (r167937): Do not use effective zoom factor while resolving media query's min-, max-(device)width/height values. https://bugs.webkit.org/show_bug.cgi?id=133681

Reviewed by Simon Fraser.

We lost the default multiplier(zoom) value of 1 with r167937 at template<typename T> T computeLength().
Now MediaQueryEvaluator takes the current page zoom factor into account while resolving min-, max- width values.

This patch explicitly sets the multiplier value to 1 to ensure zoom independent media query value resolving.

Source/WebCore:
Test: fast/media/media-query-with-scaled-content.html

* css/CSSToLengthConversionData.cpp:
(WebCore::CSSToLengthConversionData::viewportWidthFactor):
(WebCore::CSSToLengthConversionData::viewportHeightFactor):
* css/CSSToLengthConversionData.h:
* css/MediaQueryEvaluator.cpp:
(WebCore::MediaQueryEvaluator::eval):
* testing/Internals.cpp:
(WebCore::Internals::setPageZoomFactor):
* testing/Internals.h:
* testing/Internals.idl:

LayoutTests:
* fast/media/media-query-with-scaled-content-expected.html: Added.
* fast/media/media-query-with-scaled-content.html: Added.


Canonical link: https://commits.webkit.org/151684@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169779 268f45cc-cd09-0410-ab3c-d52691b4dbfc